<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="above_bot">Above bottom bar</string>
    <string name="above_top">Above top bar</string>
    <string name="accept_cookie">Cookies accepted (Recommended)</string>
    <string name="accept_cookie_info_1">Allows the site to store or read cookies.</string>
    <string name="accept_cookie_info_2">Some sites may not function properly if you do not accept cookies.</string>
    <string name="active_function">Activate the function.</string>
    <string name="add">Add</string>
    <string name="add_book">Add to bookmark</string>
    <string name="add_folder">Add folder</string>
    <string name="add_home_1">Add to home screen</string>
    <string name="add_home_2">"Add to phone's home screen"</string>
    <string name="add_icon">Add button</string>
    <string name="add_page">Add current page</string>
    <string name="add_quick">Add to Soul homepage</string>
    <string name="add_site">Add current site</string>
    <string name="added">Added</string>
    <string name="addr_icon_info">2. You can remove it by clicking the icon.</string>
    <string name="address_bar">Search bar</string>
    <string name="address_icon">Search bar button</string>
    <string name="address_label">Search bar label</string>
    <string name="address_menu">Search bar menu</string>
    <string name="ads_allow_page">Allow ads on current page</string>
    <string name="ads_allow_site">Allow ads on current site</string>
    <string name="ads_block">Ad blocker</string>
    <string name="ads_block_info">At least one filter must be active to block ads.</string>
    <string name="ads_filter">Ad filter</string>
    <string name="ads_guide_1">In-app ads are ads displayed by apps.</string>
    <string name="ads_guide_2">"Soul Browser's in-app ads don't bother you."</string>
    <string name="ads_guide_3">It only appears in very limited locations.</string>
    <string name="ads_guide_4">"Soul Browser's goal is to provide convenience and comfort to its users."</string>
    <string name="ads_guide_5">Website ads are advertisements displayed by website administrators.</string>
    <string name="ads_guide_6">It has nothing to do with Soul Browser.</string>
    <string name="ads_guide_7">Soul Browser does not display in-app ads on websites.</string>
    <string name="ads_guide_8">All features of Soul Browser are free.</string>
    <string name="ads_retry">"The advertisement is not ready yet.
Please try again later."</string>
    <string name="ads_white">Ad whitelist</string>
    <string name="advanced">Advanced</string>
    <string name="album">Album</string>
    <string name="album_location">Album location</string>
    <string name="album_short_info">Create an album shortcut button on the home screen.</string>
    <string name="album_shortcut">Create album shortcut</string>
    <string name="all">All</string>
    <string name="allow">Allow</string>
    <string name="allow_all_site">All sites allowed</string>
    <string name="already_added">Already added</string>
    <string name="already_paid">It has already been purchased.</string>
    <string name="always_allow">Always allowed</string>
    <string name="always_block">Always blocked</string>
    <string name="always_use">Always use</string>
    <string name="always_visible">Always visible</string>
    <string name="android_shot">Android Screenshot</string>
    <string name="android_support">Supported since Android %d.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_block">Block app execution</string>
    <string name="app_block_info1">Block the site from running other apps.</string>
    <string name="app_block_info2">If site information is available, open the site.</string>
    <string name="app_block_noti">The site is trying to run another app.</string>
    <string name="app_exit">Exit app</string>
    <string name="app_keyboard">Keyboard activation on app startup</string>
    <string name="app_lock">App lock</string>
    <string name="app_name">Soul</string>
    <string name="app_restart">You need to restart the app.</string>
    <string name="app_site">Open in browser</string>
    <string name="app_ver">Mod by Zilllot 🔥</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="apply_pass_equal">Applied equally to others</string>
    <string name="apply_url_equal">Applied equally to others</string>
    <string name="apps_none">Permission denied or app not installed.</string>
    <string name="artist">Artist</string>
    <string name="at_bottom">At the bottom</string>
    <string name="audio">Audio</string>
    <string name="audio_error">Audio playback failed</string>
    <string name="audio_file">Audio track</string>
    <string name="audio_off">Audio off</string>
    <string name="audio_on">Audio on</string>
    <string name="audio_sync">Audio sync</string>
    <string name="auto_comp">Auto complete</string>
    <string name="auto_detect">Automatic detection</string>
    <string name="auto_group">Automatic grouping</string>
    <string name="auto_group_info">They are automatically grouped when a new window opens on the site.</string>
    <string name="auto_speak">Auto speak</string>
    <string name="auto_speak_guide">TTS runs automatically when reader mode is started.</string>
    <string name="auto_update">Auto update</string>
    <string name="back_play">Background playback</string>
    <string name="back_play_info">Due to YouTube policy, YouTube background playback is not supported.</string>
    <string name="back_url">Background tab</string>
    <string name="background">Background</string>
    <string name="backup_changed_1">The backup file format has changed.</string>
    <string name="backup_changed_2">Backup files from previous versions are no longer supported.</string>
    <string name="backup_changed_3">Please create a new backup file.</string>
    <string name="backup_export">Export</string>
    <string name="backup_import">Import</string>
    <string name="backup_target">Please select a target.</string>
    <string name="backup_title">Backup</string>
    <string name="baidu">Baidu</string>
    <string name="bar_remove_info">To remove the top bar, delete all icons from the top bar.</string>
    <string name="barcode_fail">No QR code or barcode found in the image.</string>
    <string name="barcode_guide">Please put the QR code or barcode inside the guide line.</string>
    <string name="basic">Basic</string>
    <string name="below_bot">Below bottom bar</string>
    <string name="below_top">Below top bar</string>
    <string name="best_info">The best size for the current type</string>
    <string name="best_size">Best size</string>
    <string name="big_icon">Big icon</string>
    <string name="bing">Bing</string>
    <string name="blank_page">Blank page</string>
    <string name="block_a_image">Block image (Block ads)</string>
    <string name="block_amp">Disable Google AMP</string>
    <string name="block_amp_info">Disable Google AMP in Google search results.</string>
    <string name="block_back">Block only in the background</string>
    <string name="block_harm_site">Block harmful sites</string>
    <string name="block_images">Block images</string>
    <string name="block_in_secret">Block only in incognito mode</string>
    <string name="block_link">Block link</string>
    <string name="block_ssl">SSL error blocking</string>
    <string name="block_ssl_info">When an SSL error occurs, the page automatically goes to a safe page.</string>
    <string name="blocked_image">Blocked images</string>
    <string name="blocked_link">Blocked Links</string>
    <string name="bookmark">Bookmark</string>
    <string name="bot_bar">Bottom bar</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bright_info">This may not apply if automatic lighting is activated.</string>
    <string name="brightness">Brightness</string>
    <string name="button_title">Button</string>
    <string name="cache">Cache</string>
    <string name="cache_info">Files created during web browsing (e.g. images)</string>
    <string name="camcorder">Camcorder</string>
    <string name="camera">Camera</string>
    <string name="camera_fail">Camera failed to launch.</string>
    <string name="cancel">Cancel</string>
    <string name="canceling">Canceling…</string>
    <string name="cancelled">Cancelled</string>
    <string name="capture">Screenshot</string>
    <string name="change_after">after change</string>
    <string name="change_before">Before change</string>
    <string name="edit">Edit</string>
    <string name="exist_url">Existing URL</string>
    <string name="history_1day">1 day</string>
    <string name="history_1mon">1 month</string>
    <string name="history_1week">1 week</string>
    <string name="history_1year">1 year</string>
    <string name="history_6mon">6 months</string>
    <string name="history_info_limit">Records older than the retention period are automatically deleted.</string>
    <string name="history_info_none">"All your history is saved.
Too much data can slow browser performance."</string>
    <string name="history_info_zero">"History will not be saved.
All previously saved records will be deleted."</string>
    <string name="history_none">Unlimited</string>
    <string name="history_zero">Do not save</string>
    <string name="loading">Loading…</string>
    <string name="not_used">Not used</string>
    <string name="quick_guide_1">1. You can move by pressing and holding the icon.</string>
    <string name="reset">Reset</string>
    <string name="skip">Skip</string>
</resources>