<?xml version="1.0" encoding="utf-8"?>
<com.mycompany.app.view.MyDialogLinear android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <androidx.core.widget.NestedScrollView android:layout_gravity="start|center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:overScrollMode="never">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.mycompany.app.view.MyLineRelative android:id="@id/item_frame_1" android:layout_width="fill_parent" android:layout_height="wrap_content" app:lineDn="true" app:linePad="16.0dip">
                    <com.mycompany.app.view.MyButtonCheck android:id="@id/item_check_1" android:layout_width="@dimen/item_size" android:layout_height="@dimen/setting_list_height" android:layout_centerVertical="true" android:layout_alignParentEnd="true" app:checked="@drawable/outline_done_black_24" />
                    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/control_text_size" android:ellipsize="end" android:id="@id/item_title_1" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/history_zero" android:maxLines="2" android:layout_centerVertical="true" android:layout_marginStart="16.0dip" android:layout_toStartOf="@id/item_check_1" />
                </com.mycompany.app.view.MyLineRelative>
                <com.mycompany.app.view.MyLineRelative android:id="@id/item_frame_2" android:layout_width="fill_parent" android:layout_height="wrap_content" app:lineDn="true" app:linePad="16.0dip">
                    <com.mycompany.app.view.MyButtonCheck android:id="@id/item_check_2" android:layout_width="@dimen/item_size" android:layout_height="@dimen/setting_list_height" android:layout_centerVertical="true" android:layout_alignParentEnd="true" app:checked="@drawable/outline_done_black_24" />
                    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/control_text_size" android:ellipsize="end" android:id="@id/item_title_2" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/history_1day" android:maxLines="2" android:layout_centerVertical="true" android:layout_marginStart="16.0dip" android:layout_toStartOf="@id/item_check_2" />
                </com.mycompany.app.view.MyLineRelative>
                <com.mycompany.app.view.MyLineRelative android:id="@id/item_frame_3" android:layout_width="fill_parent" android:layout_height="wrap_content" app:lineDn="true" app:linePad="16.0dip">
                    <com.mycompany.app.view.MyButtonCheck android:id="@id/item_check_3" android:layout_width="@dimen/item_size" android:layout_height="@dimen/setting_list_height" android:layout_centerVertical="true" android:layout_alignParentEnd="true" app:checked="@drawable/outline_done_black_24" />
                    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/control_text_size" android:ellipsize="end" android:id="@id/item_title_3" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/history_1week" android:maxLines="2" android:layout_centerVertical="true" android:layout_marginStart="16.0dip" android:layout_toStartOf="@id/item_check_3" />
                </com.mycompany.app.view.MyLineRelative>
                <com.mycompany.app.view.MyLineRelative android:id="@id/item_frame_4" android:layout_width="fill_parent" android:layout_height="wrap_content" app:lineDn="true" app:linePad="16.0dip">
                    <com.mycompany.app.view.MyButtonCheck android:id="@id/item_check_4" android:layout_width="@dimen/item_size" android:layout_height="@dimen/setting_list_height" android:layout_centerVertical="true" android:layout_alignParentEnd="true" app:checked="@drawable/outline_done_black_24" />
                    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/control_text_size" android:ellipsize="end" android:id="@id/item_title_4" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/history_1mon" android:maxLines="2" android:layout_centerVertical="true" android:layout_marginStart="16.0dip" android:layout_toStartOf="@id/item_check_4" />
                </com.mycompany.app.view.MyLineRelative>
                <com.mycompany.app.view.MyLineRelative android:id="@id/item_frame_5" android:layout_width="fill_parent" android:layout_height="wrap_content" app:lineDn="true" app:linePad="16.0dip">
                    <com.mycompany.app.view.MyButtonCheck android:id="@id/item_check_5" android:layout_width="@dimen/item_size" android:layout_height="@dimen/setting_list_height" android:layout_centerVertical="true" android:layout_alignParentEnd="true" app:checked="@drawable/outline_done_black_24" />
                    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/control_text_size" android:ellipsize="end" android:id="@id/item_title_5" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/history_6mon" android:maxLines="2" android:layout_centerVertical="true" android:layout_marginStart="16.0dip" android:layout_toStartOf="@id/item_check_5" />
                </com.mycompany.app.view.MyLineRelative>
                <com.mycompany.app.view.MyLineRelative android:id="@id/item_frame_6" android:layout_width="fill_parent" android:layout_height="wrap_content" app:lineDn="true" app:linePad="16.0dip">
                    <com.mycompany.app.view.MyButtonCheck android:id="@id/item_check_6" android:layout_width="@dimen/item_size" android:layout_height="@dimen/setting_list_height" android:layout_centerVertical="true" android:layout_alignParentEnd="true" app:checked="@drawable/outline_done_black_24" />
                    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/control_text_size" android:ellipsize="end" android:id="@id/item_title_6" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/history_1year" android:maxLines="2" android:layout_centerVertical="true" android:layout_marginStart="16.0dip" android:layout_toStartOf="@id/item_check_6" />
                </com.mycompany.app.view.MyLineRelative>
                <com.mycompany.app.view.MyLineRelative android:id="@id/item_frame_7" android:layout_width="fill_parent" android:layout_height="wrap_content" app:lineDn="true" app:linePad="16.0dip">
                    <com.mycompany.app.view.MyButtonCheck android:id="@id/item_check_7" android:layout_width="@dimen/item_size" android:layout_height="@dimen/setting_list_height" android:layout_centerVertical="true" android:layout_alignParentEnd="true" app:checked="@drawable/outline_done_black_24" />
                    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/control_text_size" android:ellipsize="end" android:id="@id/item_title_7" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/history_none" android:maxLines="2" android:layout_centerVertical="true" android:layout_marginStart="16.0dip" android:layout_toStartOf="@id/item_check_7" />
                </com.mycompany.app.view.MyLineRelative>
                <FrameLayout android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
                    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/info_text_size" android:layout_gravity="start|center" android:id="@id/time_info_1" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/history_info_zero" android:lineSpacingExtra="4.0dip" />
                    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/info_text_size" android:layout_gravity="start|center" android:id="@id/time_info_2" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/history_info_limit" android:lineSpacingExtra="4.0dip" />
                    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/info_text_size" android:layout_gravity="start|center" android:id="@id/time_info_3" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/history_info_none" android:lineSpacingExtra="4.0dip" />
                </FrameLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
    <com.mycompany.app.view.MyLineText android:textSize="@dimen/list_text_size" android:gravity="center" android:id="@id/apply_view" android:layout_width="fill_parent" android:layout_height="@dimen/item_size" android:text="@string/apply" app:linePad="16.0dip" app:lineUp="true" />
</com.mycompany.app.view.MyDialogLinear>