<?xml version="1.0" encoding="utf-8"?>
<com.mycompany.app.view.MyDialogLinear android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.mycompany.app.view.MyLineText android:textSize="@dimen/list_text_size" android:gravity="start|center" android:id="@id/title_view" android:layout_width="fill_parent" android:layout_height="@dimen/item_size" android:text="@string/edit" android:singleLine="true" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" app:lineDn="true" app:linePad="16.0dip" />
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" android:overScrollMode="never">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.mycompany.app.fragment.FragmentDragView android:id="@id/list_view" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:listSelector="@android:color/transparent" android:divider="@null" />
        </FrameLayout>
    </androidx.core.widget.NestedScrollView>
    <com.mycompany.app.view.MyLineLinear android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/item_size" android:baselineAligned="false" app:linePad="16.0dip" app:lineUp="true">
        <com.mycompany.app.view.MyLineText android:textSize="@dimen/list_text_size" android:gravity="center" android:id="@id/reset_view" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/reset" android:layout_weight="1.0" app:lineColor="@color/shadow_color" app:lineRt="true" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/list_text_size" android:gravity="center" android:id="@id/apply_view" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/apply" android:layout_weight="1.0" />
    </com.mycompany.app.view.MyLineLinear>
</com.mycompany.app.view.MyDialogLinear>