<?xml version="1.0" encoding="utf-8"?>
<com.mycompany.app.view.MyDialogLinear android:orientation="vertical" android:id="@id/main_layout" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/control_text_size" android:gravity="center" android:id="@id/message_view" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/content_height" android:text="@string/loading" />
        <LinearLayout android:orientation="vertical" android:id="@id/exist_frame" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sub_text_size" android:gravity="center_vertical" android:id="@id/exist_title" android:layout_width="fill_parent" android:layout_height="@dimen/sub_title_height" android:text="@string/exist_url" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" />
            <com.mycompany.app.view.MyLineRelative android:paddingTop="8.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:lineDn="true" app:linePad="16.0dip">
                <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/info_text_size" android:gravity="center_vertical" android:id="@id/old_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/change_before" android:layout_marginStart="16.0dip" />
                <com.mycompany.app.view.MyRoundImage android:id="@id/old_icon" android:layout_width="@dimen/item_real_size" android:layout_height="@dimen/item_real_size" android:layout_marginTop="8.0dip" android:scaleType="centerCrop" android:layout_below="@id/old_title" android:layout_marginStart="16.0dip" app:circleRadius="@dimen/circle_radius" />
                <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/list_text_size" android:gravity="center_vertical" android:id="@id/old_dir" android:layout_width="fill_parent" android:layout_height="20.0dip" android:layout_marginTop="8.0dip" android:singleLine="true" android:layout_below="@id/old_title" android:layout_marginStart="72.0dip" android:layout_marginEnd="16.0dip" />
                <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/list_text_size" android:gravity="center_vertical" android:id="@id/old_name" android:layout_width="fill_parent" android:layout_height="20.0dip" android:singleLine="true" android:layout_below="@id/old_dir" android:layout_marginStart="72.0dip" android:layout_marginEnd="16.0dip" />
            </com.mycompany.app.view.MyLineRelative>
            <com.mycompany.app.view.MyLineRelative android:paddingTop="8.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:lineDn="true" app:linePad="16.0dip">
                <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/info_text_size" android:gravity="center_vertical" android:id="@id/new_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/change_after" android:layout_marginStart="16.0dip" />
                <com.mycompany.app.view.MyRoundImage android:id="@id/new_icon" android:layout_width="@dimen/item_real_size" android:layout_height="@dimen/item_real_size" android:layout_marginTop="8.0dip" android:scaleType="centerCrop" android:layout_below="@id/new_title" android:layout_marginStart="16.0dip" app:circleRadius="@dimen/circle_radius" />
                <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/list_text_size" android:gravity="center_vertical" android:id="@id/new_dir" android:layout_width="fill_parent" android:layout_height="20.0dip" android:layout_marginTop="8.0dip" android:singleLine="true" android:layout_below="@id/new_title" android:layout_marginStart="72.0dip" android:layout_marginEnd="16.0dip" />
                <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/list_text_size" android:gravity="center_vertical" android:id="@id/new_name" android:layout_width="fill_parent" android:layout_height="20.0dip" android:singleLine="true" android:layout_below="@id/new_dir" android:layout_marginStart="72.0dip" android:layout_marginEnd="16.0dip" />
            </com.mycompany.app.view.MyLineRelative>
            <FrameLayout android:id="@id/check_equal_view" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.mycompany.app.view.MyButtonCheck android:layout_gravity="start|center" android:id="@id/check_equal_check" android:layout_width="@dimen/item_size" android:layout_height="@dimen/item_size" android:layout_marginStart="4.0dip" app:bgPreColor="@color/white_pre" app:checked="@drawable/baseline_check_box_black_24" app:unchecked="@drawable/outline_check_box_outline_blank_black_24" />
                <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/control_text_size" android:layout_gravity="start|center" android:id="@id/check_equal_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/apply_url_equal" android:layout_marginStart="56.0dip" android:layout_marginEnd="16.0dip" />
            </FrameLayout>
        </LinearLayout>
        <com.mycompany.app.view.MyCoverView android:layout_gravity="center" android:id="@id/load_view" android:layout_width="@dimen/item_size" android:layout_height="@dimen/item_size" />
    </FrameLayout>
    <com.mycompany.app.view.MyLineLinear android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/item_size" android:baselineAligned="false" app:linePad="16.0dip" app:lineUp="true">
        <com.mycompany.app.view.MyLineText android:textSize="@dimen/list_text_size" android:gravity="center" android:id="@id/skip_view" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/skip" android:layout_weight="1.0" app:lineColor="@color/shadow_color" app:lineRt="true" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/list_text_size" android:gravity="center" android:id="@id/apply_view" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/cancel" android:layout_weight="1.0" />
    </com.mycompany.app.view.MyLineLinear>
</com.mycompany.app.view.MyDialogLinear>